{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 12,
  "lineage": "544e7d78-e160-bb92-4e98-7ea9931cdb87",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d9233e8ce73df7b2",
            "arn": "arn:aws:ec2:ap-southeast-1:328305888444:instance/i-03203c3b42d103bc1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03203c3b42d103bc1",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_devops",
            "monitoring": false,
            "primary_network_interface_id": "eni-03c46e3325f1895df",
            "private_dns": "ip-10-0-1-103.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-13-250-8-194.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.8.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04bb9ff5ac295ebb0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0eaa7419c0dc49349",
            "tags": {
              "Name": "ec2_devops"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e4040dbb57fc092b"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0da2b6a5dfeb37548",
            "owner_id": "328305888444",
            "tags": {
              "Name": "vpc_devops_IGW"
            },
            "vpc_id": "vpc-0f63130367a41286c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-088975ca8a8706fca",
            "owner_id": "328305888444",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da2b6a5dfeb37548",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "vpc_id": "vpc-0f63130367a41286c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039cdfe03d2e80105",
            "route_table_id": "rtb-088975ca8a8706fca",
            "subnet_id": "subnet-0eaa7419c0dc49349"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgprivate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:328305888444:security-group/sg-094a844f8b9f280da",
            "description": "Allow traffic from public subnet",
            "egress": [],
            "id": "sg-094a844f8b9f280da",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_test_web",
            "name_prefix": null,
            "owner_id": "328305888444",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private_subnet_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f63130367a41286c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:328305888444:security-group/sg-0e4040dbb57fc092b",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [],
            "id": "sg-0e4040dbb57fc092b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_devops",
            "name_prefix": null,
            "owner_id": "328305888444",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_subnet_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f63130367a41286c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:328305888444:subnet/subnet-0de69e41af8d8702a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0de69e41af8d8702a",
            "map_public_ip_on_launch": false,
            "owner_id": "328305888444",
            "tags": {
              "Name": "sub_private_subnet"
            },
            "vpc_id": "vpc-0f63130367a41286c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:328305888444:subnet/subnet-0eaa7419c0dc49349",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0eaa7419c0dc49349",
            "map_public_ip_on_launch": false,
            "owner_id": "328305888444",
            "tags": {
              "Name": "sub_public_subnet"
            },
            "vpc_id": "vpc-0f63130367a41286c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:328305888444:vpc/vpc-0f63130367a41286c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020d8baecaa2bc63f",
            "default_route_table_id": "rtb-00593fb992e06b0c0",
            "default_security_group_id": "sg-055146186f28dbeba",
            "dhcp_options_id": "dopt-556d6d32",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f63130367a41286c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00593fb992e06b0c0",
            "owner_id": "328305888444",
            "tags": {
              "Name": "vpc_devops"
            }
          }
        }
      ]
    }
  ]
}